--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -1,9 +1,13 @@
 
 $colors-primary-100: hsl(0, 14%, 93%);
 $colors-primary-200: hsl(0, 0%, 97%);
-$colors-primary-400: hsl(239, 57%, 42%);
+$colors-primary-400: hsl(218, 74%, 46%);
 $colors-primary-900: hsl(238, 89%, 30%);
+
+$colors-box: rgba(0, 0, 0, 0.3);
 
 $colors-accent-400: #ff6635;
 $colors-accent-500: #dd4e11;
+
+
 
