--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,39 +4,25 @@ body {
     font-family: $font-family-base;
     font-weight: $font-weight-400;
     font-size: $size-400;
-    background: $colors-primary-900;
+    background: $colors-primary-400;
     color: $colors-primary-200;
     font-family: $font-family-base;
     line-height: 1.5;
   }
 
-h1, h2, h3 {
+h1 {
     font-family: $font-family-accent;
     font-weight: $font-weight-700;
+    font-size: clamp($size-600, $size-500 + 2vw, $size-800);
+    box-shadow: 0px 6px 8px $colors-box;
     line-height: 1.1;
     margin-top: 0;
 }
 
-h1 {
-    font-size: clamp($size-600, $size-500 + 2vw, $size-800);
-    // makes font size growth with the size of the container
-    // clamp is going to control max size of container
-
-
-}
-
-h2 {
-    font-size: clamp($size-500, $size-400 + 1.5vw, $size-600);
-    // makes font size growth with the size of the container
-    // clamp is going to control max size of container
-}
-
-h3 {
-    font-size: $size-500;
-}
 p {
     margin-top: 0;
-    font-size: $size-400;
+    font-size: $size-500;
+    letter-spacing: 1.1px;
 }
 a, a:link, a:visited{
     text-decoration: none;
@@ -47,3 +33,8 @@ a:hover, a:focus {
     text-decoration: underline;
     color: $colors-accent-500;
 }
+
+footer {
+    margin-top: $size-600;
+}
+
