--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -8,6 +8,7 @@ button {
     padding: $size-200 $size-300;
     border: none;
     border-radius: $size-200;
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
     cursor: pointer;
 }
 
