--- a/sass/layout/layout.scss
+++ b/sass/layout/layout.scss
@@ -31,8 +31,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
+
     gap: $size-700;
 
 }
 
+.span {
+
+  padding: $size-200 $size-400;
+
+}
