--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -13,16 +13,18 @@ body {
 h1 {
     font-family: $font-family-accent;
     font-weight: $font-weight-700;
-    font-size: clamp($size-600, $size-500 + 2vw, $size-800);
+    font-size: clamp($size-700, $size-500 + 2vw, $size-900);
+    color: $colors-accent-400;
     line-height: 1.1;
     margin-top: 0;
+    text-shadow: 5px 5px  2px rgba(0, 0, 0, 0.3);
   }
 
 
 
 p {
     margin-top: 0;
-    font-size: $size-500;
+    font-size: $size-600;
     letter-spacing: 1.1px;
 }
 a, a:link, a:visited{
