--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -8,11 +8,13 @@ button {
     padding: $size-200 $size-300;
     border: none;
     border-radius: $size-200;
-    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
+    text-transform: uppercase;
     cursor: pointer;
 }
 
 button:hover, button:focus {
     background: $colors-accent-400;
     text-decoration: underline;
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
+    transition: 300ms ease;
 }
